DBX2006/Dbxsrc/Common/Dbx32.h

 DbxContext;
 TArc;
 TAttribute;
 TBus;
 TComponent;
 TDesign;
 TField;
 TLine;
 TNet;
 TNetClass;
 TPad;
 TPin;
 TPoint;
 TPort;
 TPrintJob;
 TRoom;
 TSymbol;
 TText;
 TVia;
 TWire;
 TTable;
 TMetaFile;
 TDiagram;
 TDetail;
TItem;
long 
DLLX THighlightArc (DbxContext* pContext,     
                    long        color,        
                    TArc*       pTArc);       
long 
DLLX THighlightAttribute(DbxContext* pContext,
                         long        color,   
                         TAttribute* pTAttr); 
long 
DLLX THighlightBus      (DbxContext* pContext,
                         long        color,   
                         TBus*       pTBus);  
long 
DLLX THighlightComponent(DbxContext* pContext,     
                    long        color,        
                    TComponent* pTComponent); 
long 
DLLX THighlightDetail (DbxContext* pContext,      
                       long        color,         
                       TDetail*    pTDetail);     
long 
DLLX THighlightDiagram (DbxContext* pContext,      
                        long        color,         
                        TDiagram*   pTDiagram);    
long 
DLLX THighlightField  (DbxContext* pContext,     
                    long        color,        
                    TField*     pTField);     
long 
DLLX THighlightItem(DbxContext* pContext,     
                    long        color,        
                    TItem*      pTItem);      
long 
DLLX THighlightLine(DbxContext* pContext,     
                    long        color,        
                    TLine*      pTLine);      
long 
DLLX THighlightMetaFile (DbxContext* pContext,      
                         long        color,         
                         TMetaFile*  pTMetaFile);   
long 
DLLX THighlightNet (DbxContext* pContext,     
                    long        color,        
                    TNet*       pTNet);       
long 
DLLX THighlightPad (DbxContext* pContext,     
                    long        color,        
                    TPad*       pTPad);       
long 
DLLX THighlightPin (DbxContext* pContext,     
                    long        color,        
                    TPin*       pTPin);       
long 
DLLX THighlightPoint(DbxContext* pContext,    
                    long        color,        
                    TPoint*     pTPoint);     
long 
DLLX THighlightPort (DbxContext* pContext,    
                    long        color,        
                    TPort*      pTPort);      
long  
DLLX  THighlightRoom  (DbxContext* pContext,  
                       long        color,     
                       TRoom*      pTRoom);   
long 
DLLX THighlightSymbol (DbxContext* pContext,     
                       long        color,        
                       TSymbol*    pTSymbol);    
long
DLLX THighlightTable(DbxContext* pContext,    
                     long        color,       
                     TTable*     pTTable);    
long 
DLLX THighlightText(DbxContext* pContext,     
                    long        color,        
                    TText*      pTText);      
long 
DLLX THighlightVia (DbxContext* pContext,     
                    long        color,        
                    TVia*       pTVia);       
long 
DLLX THighlightWire(DbxContext* pContext,     
                    long        color,        
                    TWire*      pTWire);      
long 
DLLX TModifyArc (DbxContext* pContext,          
                 TArc*       pTArc);            
long 
DLLX TModifyAttribute(DbxContext* pContext,     
                      TAttribute* pTAttr);      
long 
DLLX TModifyBus      (DbxContext* pContext,     
                      TBus*       pTBus);       
long 
DLLX TModifyClassToClassAttribute  (DbxContext* pContext,       
                                    long        netClassId1,    
                                    long        netClassId2,    
                                    TAttribute* TAttribute);    
long 
DLLX TModifyClassToClassLayerRule(DbxContext* pContext,     
                                  long        netclassId1,  
                                  long        netclassId2,  
                            const char*       layerName,    
                                  TAttribute* pAttr);       
long 
DLLX TModifyCompAttribute  (DbxContext* pContext,       
                                  char* pCompRefDes,    
                            TAttribute* TAttribute);    
long 
DLLX TModifyComponent(DbxContext* pContext,     
                      TComponent* pTComponent); 
long  
DLLX  TModifyDesignAttribute     (DbxContext* pContext,     
                                  TAttribute* pTAttr);      
long
DLLX TModifyDesignInfo (DbxContext * pContext,      
                        TDesign    * pDesignInfo);
long 
DLLX TModifyField (DbxContext* pContext,     
                   TField*     pTField);     
long  
DLLX  TModifyLayerAttribute     (DbxContext* pContext,     
                                 long        layerId,      
                                 TAttribute* pTAttr);      
long 
DLLX TModifyItem (DbxContext* pContext,     
                  TItem*      pTItem);      
long 
DLLX TModifyLine (DbxContext* pContext,     
                  TLine*      pTLine);      
long 
DLLX TModifyNet  (DbxContext* pContext,     
                  TNet*       pTNet);       
long 
DLLX TModifyNetAttribute  (DbxContext* pContext,       
                           long        netId,          
                           TAttribute* TAttribute);    
long 
DLLX TModifyNetClass  (DbxContext* pContext,     
                       TNetClass*  pTNetClass);  
long 
DLLX TModifyNetClassAttribute  (DbxContext* pContext,       
                                long        netId,          
                                TAttribute* TAttribute);    
long 
DLLX TModifyNetClassLayerRule(DbxContext* pContext,   
                              long        netClassId, 
                        const char*       layerName,  
                              TAttribute* pAttr);     
long 
DLLX TModifyNetLayerRule(DbxContext* pContext,   
                         long        netId,      
                   const char*       layerName,  
                         TAttribute* pAttr);     
long 
DLLX TModifyPad  (DbxContext* pContext,     
                  TPad*       pTPad);       
long 
DLLX TModifyPin  (DbxContext* pContext,     
                  TPin*       pTPin);       
long 
DLLX TModifyPoint(DbxContext* pContext,     
                  TPoint*     pTPoint);     
long 
DLLX TModifyPort (DbxContext* pContext,     
                  TPort*      pTPort);      
long
DLLX TModifyPrintJob (DbxContext * pContext,      
                      TPrintJob  * pPrintJob);    
long  
DLLX  TModifyRoom (DbxContext* pContext,  
                   TRoom*      pTRoom);   
long  
DLLX  TModifyRoomAttribute  (DbxContext* pContext, 
                             long        roomId,   
                             TAttribute* pTAttr);  
long 
DLLX TModifySymbol(DbxContext* pContext,     
                   TSymbol*    pTSymbol);    
long 
DLLX TModifySymbolAttribute  (DbxContext* pContext,       
                              char* symbRefDes,           
                              TAttribute* TAttribute);    
long
DLLX TModifyText (DbxContext* pContext,     
                  TText*      pTText);      
long 
DLLX TModifyVia  (DbxContext* pContext,     
                  TVia*       pTVia);       
long 
DLLX TModifyWire (DbxContext* pContext,     
                  TWire*      pTWire);      
long 
DLLX TMoveArc      (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TArc*       pTArc);       
long 
DLLX TMoveAttribute(DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TAttribute* pTAttr);      
long 
DLLX TMoveBus      (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TBus*       pTBus);       
long 
DLLX TMoveComponent(DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TComponent* pTComponent); 
long
DLLX TMoveDetail   (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TDetail*    pTDetail);    
long
DLLX TMoveDiagram  (DbxContext* pContext,      
                    long        dx,           
                    long        dy,           
                    TDiagram*   pTDiagram);   
long 
DLLX TMoveField    (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TField*     pTField);     
long 
DLLX TMoveItem     (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TItem*      pTItem);      
long 
DLLX TMoveLine     (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TLine*      pTLine);      
long 
DLLX TMovePad      (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TPad*       pTPad);       
long 
DLLX TMovePin      (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TPin*       pTPin);       
long 
DLLX TMovePoint    (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TPoint*     pTPoint);     
long 
DLLX TMovePort     (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TPort*      pTPort);      
long 
DLLX TMoveSymbol   (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TSymbol*    pTSymbol);      
long
DLLX TMoveTable    (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TTable*     pTTable);     
long 
DLLX TMoveText     (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TText*      pTText);      
long 
DLLX TMoveVia      (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TVia*       pTVia);       
long 
DLLX TMoveWire     (DbxContext* pContext,     
                    long        dx,           
                    long        dy,           
                    TWire*      pTWire);      
long
DLLX TMoveMetaFile (DbxContext*     pContext,    
                    long         dx,          
                    long         dy,          
                    TMetaFile*   pTMetaFile); 
long 
DLLX TOpenDesign (long language,
                  long version, 
                  const char* pDesignName, 
                  DbxContext* pContext);
long 
DLLX TOpenComponent   (DbxContext*   pContext, 
                       const char*   pCompType);
long  
DLLX  TOpenLibrary(long language,            
                   long version,             
                   const char* pLibraryName, 
                   DbxContext* pContext);    
long
DLLX TOutputPrintJobByName (DbxContext * pContext,  
                            const char * pJobName); 
long
DLLX TOutputSelectedPrintJobs (DbxContext * pContext);  
long 
DLLX TPlaceArc (DbxContext* pContext,          
                TArc*       pTArc);            
long 
DLLX TPlaceAttribute(DbxContext* pContext,     
                     TAttribute* pTAttr);      
long 
DLLX TPlaceBus      (DbxContext* pContext,     
                     TBus*       pTBus);       
long 
DLLX TPlaceComponent(DbxContext* pContext,     
                     TComponent* pTComponent); 
long 
DLLX TPlaceField    (DbxContext* pContext,     
                     TField* pTField);         
long 
DLLX TPlaceLine (DbxContext* pContext,     
                 TLine*      pTLine);      
long 
DLLX TPlacePad  (DbxContext* pContext,     
                 TPad*       pTPad);       
long 
DLLX TPlacePin  (DbxContext* pContext,     
                 TPin*       pTPin);       
long 
DLLX TPlacePoint(DbxContext* pContext,     
                 TPoint*     pTPoint);     
long 
DLLX TPlacePort (DbxContext* pContext,     
                 TPort*      pTPort);      
long 
DLLX TPlaceSymbol (DbxContext* pContext,     
                   TSymbol*    pTSymbol);    
long 
DLLX TPlaceText (DbxContext* pContext,     
                 TText*      pTText);      
long 
DLLX TPlaceVia  (DbxContext* pContext,     
                 TVia*       pTVia);       
long 
DLLX TPlaceWire (DbxContext* pContext,     
                 TWire*      pTWire);      