DBX2006/Dbxsrc/Common/dbx32.BAS


Declare Function THighlightArc Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TArc) As Long
Declare Function THighlightAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TAttribute) As Long
Declare Function THighlightBus Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TBus) As Long
Declare Function THighlightComponent Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TComponent) As Long
Declare Function THighlightDetail Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TDetail) As Long
Declare Function THighlightDiagram Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TDiagram) As Long
Declare Function THighlightField Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TField) As Long
Declare Function THighlightItem Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TItem) As Long
Declare Function THighlightLine Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TLine) As Long
Declare Function THighlightMetaFile Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TMetaFile) As Long
Declare Function THighlightNet Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightNet As TNet) As Long
Declare Function THighlightPad Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TPad) As Long
Declare Function THighlightPin Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TPin) As Long
Declare Function THighlightPoint Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TPoint) As Long
Declare Function THighlightPort Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TPort) As Long
Declare Function THighlightRoom Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, room As TRoom) As Long
Declare Function THighlightSymbol Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TSymbol) As Long
Declare Function THighlightTable Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long,highlightItem As TTable) As Long
Declare Function THighlightText Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TText) As Long
Declare Function THighlightVia Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TVia) As Long
Declare Function THighlightWire Lib "dbx32.dll" (Context As DbxContext, ByVal highlightColor As Long, highlightItem As TWire) As Long

Declare Function TModifyArc Lib "dbx32.dll" (Context As DbxContext, modifyItem As TArc) As Long
Declare Function TModifyAttribute Lib "dbx32.dll" (Context As DbxContext, modifyItem As TAttribute) As Long
Declare Function TModifyBus Lib "dbx32.dll" (Context As DbxContext, modifyItem As TBus) As Long
Declare Function TModifyClassToClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, classToClassAttribute As TAttribute) As Long
Declare Function TModifyClassToClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId1 As Long, ByVal netClassId2 As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TModifyCompAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal compRefDes As String, compAttribute As TAttribute) As Long
Declare Function TModifyComponent Lib "dbx32.dll" (Context As DbxContext, modifyItem As TComponent) As Long
Declare Function TModifyDesignAttribute Lib "dbx32.dll" (Context As DbxContext, designAttr As TAttribute) As Long
Declare Function TModifyDesignInfo Lib "dbx32.dll" (Context As DbxContext, designInfo As TDesign) As Long
Declare Function TModifyField Lib "dbx32.dll" (Context As DbxContext, modifyItem As TField) As Long
Declare Function TModifyItem Lib "dbx32.dll" (Context As DbxContext, modifyItem As TItem) As Long
Declare Function TModifyLayerAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal layerId As Long, layerAttr As TAttribute) As Long
Declare Function TModifyLine Lib "dbx32.dll" (Context As DbxContext, modifyItem As TLine) As Long
Declare Function TModifyNet Lib "dbx32.dll" (Context As DbxContext, modifyItem As TNet) As Long
Declare Function TModifyNetAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, netAttribute As TAttribute) As Long
Declare Function TModifyNetClass Lib "dbx32.dll" (Context As DbxContext, modifyItem As TNetClass) As Long
Declare Function TModifyNetClassAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, netClassAttribute As TAttribute) As Long
Declare Function TModifyNetClassLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netClassId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TModifyNetLayerRule Lib "dbx32.dll" (Context As DbxContext, ByVal netId As Long, ByVal layerName As String, pAttr As TAttribute) As Long
Declare Function TModifyPad Lib "dbx32.dll" (Context As DbxContext, modifyItem As TPad) As Long
Declare Function TModifyPin Lib "dbx32.dll" (Context As DbxContext, modifyItem As TPin) As Long
Declare Function TModifyPoint Lib "dbx32.dll" (Context As DbxContext, modifyItem As TPoint) As Long
Declare Function TModifyPort Lib "dbx32.dll" (Context As DbxContext, modifyItem As TPort) As Long
Declare Function TModifyPrintJob Lib "dbx32.dll" (Context As DbxContext, printJob As TPrintJob) As Long
Declare Function TModifyRoom Lib "dbx32.dll" (Context As DbxContext, room As TRoom) As Long
Declare Function TModifyRoomAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal roomId As Long, roomAttr As TAttribute) As Long
Declare Function TModifySymbol Lib "dbx32.dll" (Context As DbxContext, modifyItem As TSymbol) As Long
Declare Function TModifySymbolAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal symbRefDes As String, attr As TAttribute) As Long
Declare Function TModifyText Lib "dbx32.dll" (Context As DbxContext, modifyItem As TText) As Long
Declare Function TModifyVia Lib "dbx32.dll" (Context As DbxContext, modifyItem As TVia) As Long
Declare Function TModifyWire Lib "dbx32.dll" (Context As DbxContext, modifyItem As TWire) As Long

Declare Function TMoveArc Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveArc As TArc) As Long
Declare Function TMoveAttribute Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveAttribute As TAttribute) As Long
Declare Function TMoveBus Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveBus As TBus) As Long
Declare Function TMoveComponent Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveComponent As TComponent) As Long
Declare Function TMoveDetail Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long,moveDetail As TDetail) As Long
Declare Function TMoveDiagram Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long,moveDiagram As TDiagram) As Long
Declare Function TMoveField Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveLine As TField) As Long
Declare Function TMoveLine Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveLine As TLine) As Long
Declare Function TMoveMetaFile Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long,moveMetaFile As TMetaFile) As Long
Declare Function TMovePad Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, movePad As TPad) As Long
Declare Function TMovePin Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, movePin As TPin) As Long
Declare Function TMovePoint Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, movePoint As TPoint) As Long
Declare Function TMovePort Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, movePort As TPort) As Long
Declare Function TMoveSymbol Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveSymbol As TSymbol) As Long
Declare Function TMoveText Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveText As TText) As Long
Declare Function TMoveVia Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveVia As TVia) As Long
Declare Function TMoveWire Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveWire As TWire) As Long
Declare Function TMoveItem Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long, moveItem As TItem) As Long
Declare Function TMoveTable Lib "dbx32.dll" (Context As DbxContext, ByVal incx As Long, ByVal incy As Long,moveTable As TTable) As Long

Declare Function TOpenDesign Lib "dbx32.dll" (ByVal language As Long, ByVal version As Long, ByVal designName As String, Context As DbxContext) As Long

Declare Function TOpenLibrary Lib "dbx32.dll" (ByVal language As Long, ByVal version As Long, ByVal designName As String, Context As DbxContext) As Long
Declare Function TOpenComponent Lib "dbx32.dll" (Context As DbxContext, ByVal pCompName As String) As Long

Declare Function TOutputPrintJobByName Lib "dbx32.dll" (Context As DbxContext, ByVal jobName As String) As Long
Declare Function TOutputSelectedPrintJobs Lib "dbx32.dll" (Context As DbxContext) As Long

Declare Function TPlaceArc Lib "dbx32.dll" (Context As DbxContext, placeItem As TArc) As Long
Declare Function TPlaceAttribute Lib "dbx32.dll" (Context As DbxContext, placeItem As TAttribute) As Long
Declare Function TPlaceBus Lib "dbx32.dll" (Context As DbxContext, placeItem As TBus) As Long
Declare Function TPlaceComponent Lib "dbx32.dll" (Context As DbxContext, placeItem As TComponent) As Long
Declare Function TPlaceField Lib "dbx32.dll" (Context As DbxContext, placeItem As TField) As Long
Declare Function TPlaceLine Lib "dbx32.dll" (Context As DbxContext, placeItem As TLine) As Long
Declare Function TPlacePad Lib "dbx32.dll" (Context As DbxContext, placeItem As TPad) As Long
Declare Function TPlacePin Lib "dbx32.dll" (Context As DbxContext, placeItem As TPin) As Long
Declare Function TPlacePoint Lib "dbx32.dll" (Context As DbxContext, placeItem As TPoint) As Long
Declare Function TPlacePort Lib "dbx32.dll" (Context As DbxContext, placeItem As TPort) As Long
Declare Function TPlaceSymbol Lib "dbx32.dll" (Context As DbxContext, placeItem As TSymbol) As Long
Declare Function TPlaceText Lib "dbx32.dll" (Context As DbxContext, placeItem As TText) As Long
Declare Function TPlaceVia Lib "dbx32.dll" (Context As DbxContext, placeItem As TVia) As Long
Declare Function TPlaceWire Lib "dbx32.dll" (Context As DbxContext, placeItem As TWire) As Long
